<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_bg"
    style="@style/actMan">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_bg"
        style="@style/actMan">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:text="@string/viewTask"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskVIewTitle"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="30dp"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/taskEditTitle"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="160dp"
            android:layout_marginRight="30dp"
            android:hint="@string/editTitle"
            android:inputType="text|textCapCharacters"
            android:textColorHint="#212121"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />


        <CheckBox
            android:id="@+id/modTaskDone"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="220dp"
            android:layout_marginRight="30dp"
            android:text="@string/taskStatusDone"/>

        <Button
            android:id="@+id/modtaskTime"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="290dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/round_bg"
            android:text="@string/setTime"
            style="@style/onactMan"
            app:icon="@drawable/calender"
            app:iconGravity="end" />

        <Button
            android:id="@+id/modTask"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            style="@style/onactMan"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="350dp"
            android:text="@string/mod" android:textSize="24sp"
            android:textStyle="bold"
            android:contentDescription="@string/modTask"
            tools:ignore="VisualLintButtonSize" />

        <ImageButton
            android:id="@+id/closeView"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="end"
            android:contentDescription="@string/close"
            android:background="@null"
            android:src="@drawable/close"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/delTask"
            style="@style/onactMan"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="430dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#FF0000"
            android:contentDescription="@string/del"
            android:text="@string/del"
            android:textSize="24sp"
            android:textStyle="bold"
            app:icon="@drawable/delete"
            app:iconGravity="end"
            tools:ignore="VisualLintButtonSize" />

    </FrameLayout>
</FrameLayout>